--- a/src/index.css
+++ b/src/index.css
@@ -1,97 +1,69 @@
-html {
-  font-size: 62.5%;
-  box-sizing: border-box;
-}
 body {
-  margin: 0;
-  height: 100vh;
-  font-size: 1.6rem;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Helvetica';
 }
-
-.grid-container {
-  display: grid;
-  grid-template-areas:
-    'header'
-    'main'
-    'footer';
-  grid-template-columns: 1fr;
-  grid-template-rows: 5rem 1fr 5rem;
-  height: 100%;
+h1,
+h2,
+h3 {
+  margin: 0.5rem 0;
 }
-header {
-  grid-area: header;
-  background-color: #1fc477;
-}
-#root{
-  height: 100%;
-}
-
-main {
-  grid-area: main;
-  padding: 1rem;
-}
-footer {
-  grid-area: footer;
-  background-color: #1fc477;
-  color: #ffffff;
-}
-
 h1 {
-  font-size: 1.8rem;
-  padding: 1rem 0;
+  font-size: 1.5rem;
 }
 h2 {
-  font-size: 1.6rem;
-  padding: 1rem 0;
+  font-size: 1.2rem;
 }
-
+h3 {
+  font-size: 1rem;
+}
 a {
   text-decoration: none;
 }
-a:hover {
-  color: #ff8000;
-}
-
-header a {
-  color: #ffffff;
-  padding: 1rem;
-}
-a.company {
-  color: #ffffff;
-  font-size: 3rem;
-  font-weight: bold;
-}
 .row {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
 }
 .row.center {
-  justify-content: center;
+  align-items: center;
 }
-
-img {
-  border-radius: 0.5rem;
+.col-1 {
+  flex: 1;
 }
-img.medium {
-  max-width: 29rem;
-  width: 100%;
+.col-2 {
+  flex: 2;
 }
-
-.card {
-  border: 0.1rem #c0c0c0 solid;
-  background-color: #f8f8f8;
-  border-radius: 0.5rem;
-  margin: 1rem;
-}
-.card-body {
+.block {
+  background-color: #e0e0e0;
   padding: 1rem;
+  margin: 0.5rem;
+  border-radius: 0.5rem;
 }
-.card-body > * {
-  margin-bottom: 0.5rem;
+.text-right {
+  text-align: right;
 }
-.price {
-  font-size: 2rem;
+img.small {
+  max-height: 8rem;
+}
+button {
+  font-size: 0.8rem;
+  padding: 0.2rem;
+  margin: 0.1rem;
+  border-radius: 0.5rem;
+  border: 0.1rem #404040 solid;
+  background-color: #90EE90;
+  width: 100%;
+  cursor: pointer;
+}
+button.add {
+  background-color: #40c0f0;
+  width: 1.5rem;
+}
+button.remove {
+  background-color: #f04040;
+  width: 1.5rem;
+}
+button.badge {
+  background-color: #f04040;
+  border: none;
+  color: #ffffff;
+  width: 1.5rem;
 }
